<?xml version="1.0"?>
<package>
  <name>fanuc_description</name>
  <version>0.0.2</version>
  <description>The fanuc_description package</description>

  <maintainer email="cristian.mancus@unimore.it">Cristian Mancus</maintainer>

  <license>BSD-3</license>

  <author email="cristian.mancus@unimore.it">Cristian Mancus</author>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>


  <export>
  </export>
</package>
